# data-analysis

./: FINDINGS.md  README.md  alembic.ini  pyproject.toml  update_dataset.py
alembic/versions/: 2025_05_18_1858-eafeb21ce65a_initial_creation.py  2025_05_19_1305-39568445bf9b_add_url_components_table.py  2025_05_19_1914-0759856d3eba_add_html_metadata_table.py  2025_05_20_0724-b6cd7ff31ae5_add_url_compressed_html_table.py  2025_05_20_1645-772cdef9d097_add_url_html_content_metrics_table.py  2025_05_22_0946-e0d8efdd34e4_add_html_bag_of_words_table.py  2025_05_25_0818-6fed3587a37f_add_url_annotations.py  2025_05_26_0929-061958628cfd_add_html_term_tag_counts.py  2025_05_27_0758-4eee471c227f_update_bag_of_words_model.py  2025_05_27_0815-ac504e6eaf7c_add_html_bag_of_tags.py  2025_07_07_0813-e9a978774aa2_add_hash_column_to_compressed_html.py
core/: alembic_util.py  startup.py  util.py
core/database_logic/: database_client.py  enums.py  model_helpers.py  models.py  statement_composer.py
core/database_logic/dtos/: url_html_info.py  url_nlp_processing_info.py
core/db/: README.md  client.py  docker-compose.yml  enums.py
core/db/dtos/: README.md  url_info.py
core/db/dtos/input/: url_annotations.py  url_html.py
core/db/dtos/output/: README.md
core/db/models/: base.py  core.py
core/hugging_face/: get_dataset_urls.py  test_hugging_face_interface.py
core/hugging_face/url_relevance/: huggingface_relevance.py  huggingface_relevance_2.py  util.py
core/ml_input_formatter/: README.md  formatter.py  query_builder.py
core/nlp_processor/: README.md  check_query_builder.py  globals.py  html_extractor.py  page_nlp_data_processor.py  process_html.py  processing_job_runner.py  run_manager.py
core/nlp_processor/dtos/: bag_of_words.py  batch_context.py  batch_jobs.py  batch_state.py  page_info.py  page_tag_counts.py  url_html_processing_job_info.py  url_prereq_flags.py
core/nlp_processor/dtos/job_info/: html_metadata_job_info.py  html_metric_job_info.py  job_info.py  url_component_job_info.py
core/nlp_processor/families/: README.md  enum.py
core/nlp_processor/families/registry/: README.md  core.py  entry.py  instances.py
core/nlp_processor/jobs/: README.md  enums.py
core/nlp_processor/jobs/identifiers/: base.py  implementations.py
core/nlp_processor/jobs/mapper/: base.py  map.py
core/nlp_processor/jobs/processors/: README.md  base.py
core/nlp_processor/processing_jobs/: extract_domain.py  extract_url_component.py  extract_url_component_base.py  extract_url_html_metric.py  extract_url_metadata.py  url_html_processing_job_base.py
core/nlp_processor/run_manager/: core.py
core/nlp_processor/set/: context.py  state.py
core/nlp_processor/v2/: check_query_builder.py  globals.py  main.py  run_manager.py  set_state.py
core/pipeline/: 1_get_dataset_urls.py  2_get_annotations.py  3_fetch_html.py  3_process_data.py  4_process_data.py
core/scraper/: compress_html.py  fetch_html.py  url_html_fetcher.py
core/utils/: README.md  alembic.py
data/output/: README.md
database_logic/: database_client.py
nlp_data_scraper/: html_extractor.py  main.py  page_nlp_data_processor.py  url_html_fetcher.py
nlp_data_scraper/dtos/: get_bag_of_words_outcome.py  page_nlp_data.py
src/: constants.py
src/db/: client.py  format.py
src/db/df_labels/: README.md  bag_of_words.py
src/db/dtos/: labeled_data_frame.py
src/db/models/: base.py  core.py  helpers.py
src/db/queries/: builder.py
src/html_fetcher/: README.md
src/ml_input_builder/: README.md  constants.py  core.py  formatter.py  query_builder.py  run.py  uploader.py  write.py
src/ml_input_builder/registry/: entry.py  instantiations.py
src/nlp_processor/: README.md  globals.py
src/nlp_processor/run_manager/: core.py  enums.py
src/nlp_processor/set/: README.md  context.py  state.py
src/pipeline/: 1_get_dataset_urls.py  2_get_annotations.py  3_fetch_html.py  4_process_data.py  README.md
src/shared/: README.md
src/shared/bases/: README.md
src/utils/: paths.py
tests/: test_database_client.py  test_db_client.py  test_scrape_and_process.py
(+157 files in other folders)
