[project]
name = "huggingface-trainer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "brotli>=1.1.0",
    "bs4>=0.0.2",
    "datasets>=3.6.0",
    "environs>=14.1.1",
    "huggingface-hub~=0.28.1",
    "keras~=2.15.0",
    "nltk>=3.9.1",
    "numpy~=1.26.4",
    "pandas~=2.2.3",
    "pip>=25.1.1",
    "psycopg2>=2.9.10",
    "simple-state-tracker>=0.3.1",
    "spacy>=3.8.4",
    "sqlalchemy>=2.0.41",
    "tensorflow-cpu~=2.15.1",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tldextract>=5.3.0",
    "tqdm>=4.67.1",
    "transformers~=4.40.2",
    "yarl>=1.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
