[project]
name = "huggingface-trainer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "brotli>=1.1.0",
    "bs4>=0.0.2",
    "datasets>=3.6.0",
    "environs>=14.2.0",
    "huggingface-hub~=0.32.0",
    "lxml>=5.4.0",
    "nltk>=3.9.1",
    "pandas~=2.2.3",
    "pip>=25.1.1",
    "psycopg2>=2.9.10",
    "simple-state-tracker>=0.3.1",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.41",
    "tldextract>=5.3.0",
    "tqdm>=4.67.1",
    "yarl>=1.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
